# colcon-python-project-example

./: .gitignore  Dockerfile  README.md
.github/workflows/: ci.yml
src/example_library/: package.xml  setup.py
src/example_library/test/: test_hello_world.py
src/example_library_dependent/: package.xml  setup.cfg  setup.py
src/example_library_dependent/example_library_dependent/: __init__.py
src/example_library_dependent/test/: test_hello_world_wrapped.py
src/example_pytest_plugin/: package.xml  setup.cfg  setup.py
src/example_pytest_plugin/example_pytest_plugin/: __init__.py
src/example_pytest_plugin/test/: test_no_plugin.py
src/example_pytest_plugin_dependent/: package.xml  setup.cfg  setup.py
src/example_pytest_plugin_dependent/test/: test_plugin.py
src/pep517_example_library/: pyproject.toml
src/pep517_example_library/test/: test_hello_world.py
src/pep517_example_library_dependent/: pyproject.toml
src/pep517_example_library_dependent/test/: test_hello_world_wrapped.py
src/pep517_standalone_example_pytest/: TODOs  package.xml  pyproject.toml  setup.cfg  setup.py
src/pep517_standalone_example_unittest/: pyproject.toml
src/standalone_example/: package.xml  setup.cfg  setup.py
src/standalone_example/test/: test_pep257.py
src/standalone_example_pytest/: package.xml  setup.cfg  setup.py
src/standalone_example_unittest/: package.xml  setup.cfg  setup.py
src/standalone_example_unittest/test/: test_flake8.py
