[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="pep517_example_library"
authors = [
    {name="oxb", email="emanuel0xb@gmail.com"}
]
description="TODO: Package description"
license = "TODO: License declaration"

zip-safe = true
packages=["pep517_example_library"]